[package]
name = "ramdisk"
version = "0.1.0"

edition = "2021"
rust-version = "1.73"

[dependencies]
anyhow = "1.0.89"
async-channel = "2.3.1"
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
notify = { version = "6.1.1", default-features = false, features = ["serde", "macos_fsevent"] }
plist = "1.7.0"
serde = "1.0.210"
tokio = "1.40.0"
tokio-stream = "0.1.16"
toml = "0.8.19"
